--- a/businessess.html
+++ b/businessess.html
@@ -27,16 +27,24 @@
       <main>
          <div>
             <p>THIS IS THE BUSINESS PAGE</p>
+
+            <p>This website will alert you of possible COVID19 exposures. To reduce the customer-worker interactionsThis website will alert you of possible COVID19 exposures. To reduce the customer-worker interactionsThis website will alert you of possible COVID19 exposures. To reduce the customer-worker interactionsThis website will alert you of possible COVID19 exposures. To reduce the customer-worker interactionsThis website will alert you of possible COVID19 exposures. To reduce the customer-worker interactionsThis website will alert you of possible COVID19 exposures. To reduce the customer-worker interactionsThis website will alert you of possible COVID19 exposures. To reduce the customer-worker interactionsThis website will alert you of possible COVID19 exposures. To reduce the customer-worker interactionsThis website will alert you of possible COVID19 exposures. To reduce the customer-worker interactions </p>
          
             <p>
                Please provide the email you wish to recieve exposure notifications below.
             </p>
 
             <form action="#" name="form2">
-               <input type="text" placeholder="Enter the address of your " id="qrData" />
+               <input type="text" placeholder="Enter the address of your " id="qrData" class="form"/>
                <input type="button" value="Submit" onclick="makeQR();"/>
                <div id="qrcode"></div>
             </form>
+
+            <!-- <form action="#" name="form2">
+               <input type="text" placeholder="Enter the address of your " id="qrData" class="form"/>
+               <input type="button" value="Submit" onclick="makeQR();"/>
+               <div id="qrcode"></div>
+            </form> -->
 
             <ul>This website stores only the following:
                <li>The location you visited</li>
