--- a/index.html
+++ b/index.html
@@ -26,23 +26,18 @@
    
       <main>
          <div>
-            <p>This website will alert you of possible COVID19 exposures. To reduce the customer-worker interactions </p>
+            <p>This website will alert you of possible COVID19 exposures. To reduce the customer-worker interactionsThis website will alert you of possible COVID19 exposures. To reduce the customer-worker interactionsThis website will alert you of possible COVID19 exposures. To reduce the customer-worker interactionsThis website will alert you of possible COVID19 exposures. To reduce the customer-worker interactionsThis website will alert you of possible COVID19 exposures. To reduce the customer-worker interactionsThis website will alert you of possible COVID19 exposures. To reduce the customer-worker interactionsThis website will alert you of possible COVID19 exposures. To reduce the customer-worker interactionsThis website will alert you of possible COVID19 exposures. To reduce the customer-worker interactionsThis website will alert you of possible COVID19 exposures. To reduce the customer-worker interactions </p>
       
             <p>
                Please provide the email you wish to recieve exposure notifications below.
             </p>
 
-            <form action="#" name="form1">
-            <input type="text" placeholder="Enter an Email Address" name="email_text" />
-            <input type="button" value="Submit" onclick="createItem(document.form1.email_text.value, 'The Food Place'); ValidateEmail(document.form1.email_text);"/>
-
-               <!-- <input type="text" placeholder="Enter an Email Address" name="email_text1"/>
-               <input type="submit" value="READ" 
-               onclick="readItem('moondell888@gmail.com');" 
-               /> -->
+            <form action="#" name="form1" >
+               <input type="text" placeholder="Enter an E-Mail Address" name="email_text" class="form"/>
+               <input type="button" value="SEND" onclick="createItem(document.form1.email_text.value, 'The Food Place'); ValidateEmail(document.form1.email_text);"/>
             </form>
 
-            <h2>This website stores only the following:</h2>
+            <!-- <h2>This website stores only the following:</h2> -->
             <ul>
                <li>The location you visited</li>
                <li>Date and time of your visit</li>
