--- a/businessess.html
+++ b/businessess.html
@@ -16,11 +16,18 @@
             Restaurant COVID-19 Contact Tracing
          </h1>
       </header>
-   
+<!--    
       <nav class="box1">
-         <a href="index.html">For Customers</a>
-         <a href="businessess.html">For Businesses</a>
-         <a href="reporting.html">Reporting</a>
+         <a href="https://www.notericdong.com/customer.html">For Customers</a>
+         <a href="https://www.notericdong.com/businessess.html">For Businesses</a>
+         <a href="https://www.notericdong.com/reporting.html">Reporting</a>
+         <a href="mailto:ericdong97@gmail.com">Contact</a>
+      </nav> -->
+
+      <nav class="box1">
+         <a href="https://not-ericdong.github.io/Restaurant-COVID19-Contact-Tracing/customer.html">For Customers</a>
+         <a href="https://not-ericdong.github.io/Restaurant-COVID19-Contact-Tracing/businessess.html">For Businesses</a>
+         <a href="https://not-ericdong.github.io/Restaurant-COVID19-Contact-Tracing/reporting.html">Reporting</a>
          <a href="mailto:ericdong97@gmail.com">Contact</a>
       </nav>
    
@@ -30,14 +37,16 @@
 
             <p>This website will alert you of possible COVID19 exposures. To reduce the customer-worker interactionsThis website will alert you of possible COVID19 exposures. To reduce the customer-worker interactionsThis website will alert you of possible COVID19 exposures. To reduce the customer-worker interactionsThis website will alert you of possible COVID19 exposures. To reduce the customer-worker interactionsThis website will alert you of possible COVID19 exposures. To reduce the customer-worker interactionsThis website will alert you of possible COVID19 exposures. To reduce the customer-worker interactionsThis website will alert you of possible COVID19 exposures. To reduce the customer-worker interactionsThis website will alert you of possible COVID19 exposures. To reduce the customer-worker interactionsThis website will alert you of possible COVID19 exposures. To reduce the customer-worker interactions </p>
          
-            <p>
-               Please provide the email you wish to recieve exposure notifications below.
+            <p class="centered">
+               Please provide the name of your business below.
             </p>
 
             <form action="#" name="form2">
-               <input type="text" placeholder="Enter the address of your " id="qrData" class="form"/>
+               <input type="text" placeholder="Enter the address of your business" id="qrData" class="form"/>
                <input type="button" value="Submit" onclick="makeQR();"/>
-               <div id="qrcode"></div>
+               <div >
+                  <div id="qrcode" class="qr-wrapper"></div>
+               </div>
             </form>
 
             <!-- <form action="#" name="form2">
