--- a/index.html
+++ b/index.html
@@ -1,65 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>COVID-19 Contact Tracing</title>
-   <meta name="description" content="COVID-19 Contact tracing for restaurants and small businesses">
-   <link rel="stylesheet" href="styles.css">
-</head>
-
-<body>
-   <div class="container">
-      <header>
-         <!-- <img src="images/img.png" alt="description"> -->
-         <h1>
-            Restaurant COVID-19 Contact Tracing
-         </h1>
-      </header>
-   
-      <nav class="box1">
-         <a href="index.html">For Customers</a>
-         <a href="businessess.html">For Businesses</a>
-         <a href="reporting.html">Reporting</a>
-         <a href="mailto:ericdong97@gmail.com">Contact</a>
-      </nav>
-   
-      <main>
-         <div>
-            <p>This website will alert you of possible COVID19 exposures. To reduce the customer-worker interactionsThis website will alert you of possible COVID19 exposures. To reduce the customer-worker interactionsThis website will alert you of possible COVID19 exposures. To reduce the customer-worker interactionsThis website will alert you of possible COVID19 exposures. To reduce the customer-worker interactionsThis website will alert you of possible COVID19 exposures. To reduce the customer-worker interactionsThis website will alert you of possible COVID19 exposures. To reduce the customer-worker interactionsThis website will alert you of possible COVID19 exposures. To reduce the customer-worker interactionsThis website will alert you of possible COVID19 exposures. To reduce the customer-worker interactionsThis website will alert you of possible COVID19 exposures. To reduce the customer-worker interactions </p>
-      
-            <p>
-               Please provide the email you wish to recieve exposure notifications below.
-            </p>
-
-            <form action="#" name="form1" >
-               <input type="text" placeholder="Enter an E-Mail Address" name="email_text" class="form"/>
-               <input type="button" value="SEND" onclick="createItem(document.form1.email_text.value, 'The Food Place'); ValidateEmail(document.form1.email_text);"/>
-            </form>
-
-            <!-- <h2>This website stores only the following:</h2> -->
-            <ul>
-               <li>The location you visited</li>
-               <li>Date and time of your visit</li>
-               <li>The email you provided</li>
-            </ul>
-      
-            <p>For more infomation on how the website works please visit this <a
-                  href="https://github.com/not-ericdong/Restaurant-COVID19-Contact-Tracing/blob/master/README.md">page</a></p>
-         </div>
-      </main>
-   
-      <footer>
-         <p>Created by <a href="https://github.com/not-ericdong/">Eric Dong</a> 2020
-         </p>
-         <a href="https://github.com/not-ericdong/Restaurant-COVID19-Contact-Tracing" class="padded">Source Code</a>
-         <a href="mailto:ericdong97@gmail.com" class="padded">Contact</a>
-      </footer>
-   </div>
-
-   <script src="https://sdk.amazonaws.com/js/aws-sdk-2.756.0.min.js"></script>
-   <script src="qrcode.min.js"></script>
-   <script src="main.js"></script>
-   <script src="url.js"></script>
-</body>
+<html>
+   <head>
+      <title>HTML Meta Tag</title>
+      <meta http-equiv = "refresh" content = "0; url = https://not-ericdong.github.io/Restaurant-COVID19-Contact-Tracing/customer.html" />
+   </head>
+   <body>
+      <p>Hello!</p>
+   </body>
 </html>
