added aws credentials validation

--- a/businessess.html
+++ b/businessess.html
@@ -74,7 +74,7 @@
    </div>
 
    <script src="https://sdk.amazonaws.com/js/aws-sdk-2.756.0.min.js"></script>
-   <script src="qrcode.min.js"></script>
+   <script src="qrcode.js"></script>
    <script src="main.js"></script>
    <script src="url.js"></script>
 </body>
