added db query code

--- a/businessess.html
+++ b/businessess.html
@@ -35,7 +35,7 @@
          <div>
             <p>THIS IS THE BUSINESS PAGE</p>
 
-            <p>This website will alert you of possible COVID19 exposures. To reduce the customer-worker interactionsThis website will alert you of possible COVID19 exposures. To reduce the customer-worker interactionsThis website will alert you of possible COVID19 exposures. To reduce the customer-worker interactionsThis website will alert you of possible COVID19 exposures. To reduce the customer-worker interactionsThis website will alert you of possible COVID19 exposures. To reduce the customer-worker interactionsThis website will alert you of possible COVID19 exposures. To reduce the customer-worker interactionsThis website will alert you of possible COVID19 exposures. To reduce the customer-worker interactionsThis website will alert you of possible COVID19 exposures. To reduce the customer-worker interactionsThis website will alert you of possible COVID19 exposures. To reduce the customer-worker interactions </p>
+            <p>This website will alert you of possible COVID19 exposures. </p>
          
             <p class="centered">
                Please provide the name of your business below.
