--- a/customer.html
+++ b/customer.html
@@ -33,16 +33,18 @@
    
       <main>
          <div>
-            <p>This website will alert you of possible COVID19 exposures. To reduce the customer-worker interactionsThis website will alert you of possible COVID19 exposures. To reduce the customer-worker interactionsThis website will alert you of possible COVID19 exposures. To reduce the customer-worker interactionsThis website will alert you of possible COVID19 exposures. To reduce the customer-worker interactionsThis website will alert you of possible COVID19 exposures. To reduce the customer-worker interactionsThis website will alert you of possible COVID19 exposures. To reduce the customer-worker interactionsThis website will alert you of possible COVID19 exposures. To reduce the customer-worker interactionsThis website will alert you of possible COVID19 exposures. To reduce the customer-worker interactionsThis website will alert you of possible COVID19 exposures. To reduce the customer-worker interactions </p>
+            <p>This website will alert you of possible COVID19 exposures.</p>
       
             <p>
-               Please provide the email you wish to recieve exposure notifications below.
+               Please provide the email you wish to recieve exposure notifications below. If you used this webpage previously please use the same email you entered last time.
             </p>
 
             <form action="#" name="form1" >
                <input type="text" placeholder="Enter an E-Mail Address" name="email_text" class="form"/>
                <input type="button" value="SEND" onclick="createItem(document.form1.email_text.value); ValidateEmail(document.form1.email_text);"/>
             </form>
+
+            <textarea id= "textarea" style="width:400px; height:500px"></textarea>
 
             <!-- <h2>This website stores only the following:</h2> -->
             <ul>
