--- a/reporting.html
+++ b/reporting.html
@@ -35,7 +35,7 @@
 
             <form action="#" name="form3" >
                <input type="text" placeholder="Enter an E-Mail Address" name="email_text" class="form"/>
-               <input type="button" value="SEND" onclick="reporterDetails(document.form3.email_text.value);"/>
+               <input type="button" value="SEND" onclick="reporterDetails(document.form3.email_text.value); ValidateEmail(document.form1.email_text);"/>
             </form>
 
             
