--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
    </head>
    <body>
       <p>
-         Hello! This site is currently under construction.
+         Hello! 
+      </p>
+      <!-- This site is currently under construction.
          I am hosting this on AWS and using Cloudfront which makes it slightly more difficult to test my website responsivly, so I am putting this page here temporarly.
          I am working on my 
          <a href='https://github.com/not-ericdong/Restaurant-COVID19-Contact-Tracing/blob/master/README.md'>third project</a></p> along side this website both of which should be completed by the end of September 2020!
-         Thanks for visiting!
-      </p>
+         Thanks for visiting! -->
    </body>
 </html>
