added proper text

--- a/businessess.html
+++ b/businessess.html
@@ -28,11 +28,13 @@
 
       <main>
          <div>
-            <p>WHAT --------- this website is for business owners to help track??? covid 19 for customers (idk). it reduces needness contact with customers, streamlines reporting process, and provides quicker (customer input)??? the website will provide you with a qr for customers to scan. you can place the qr codes at the entrance of ur establishment, on menus, or ____</p>
+            <p>This website will allow for easy and efficient contact tracing in the event of an exposure to COVID-19 through customers entering your establishment. This website promotes worker safety by limiting worker-to-customer contact, streamlines the reporting process, and is quick for businesses to set up and for customers to use. </p>
 
-            
-            <div class="centered">
-            <h2>HOW TO USE ----  </h2>    
+            <p>Each participating establishment will obtain a unique QR code that customers can scan upon entering the premises. If a customer or worker reports that they have contracted COVID-19, the system will automatically notify through email that they could have possibly been exposed to the virus.</p>
+
+            <p>Please follow the steps below to obtain your unique QR code. No further steps will need to be taken as the website will automatically alert other customers if they have potentially been exposed. </p>
+
+            <div> 
                <ol>
                   <li value="1">Enter the name of your restraunt below.</li>
                   <li>A QR code will be generated for you</li>
@@ -52,8 +54,9 @@
                      <div id="qrcode" class="qr-wrapper"></div>
                </div>
             </form>
+            
 
-            <div class="centered">
+            <div>
             <h2>This website stores only the following:</h2>
             <ul>
                <li>The location you visited - based on the QR code scanned</li>
@@ -62,7 +65,7 @@
             </ul>
             </div>
 
-            <p class="centered">For more infomation on how the website works please visit this <a
+            <p class="small">For more infomation on how the website works please visit this <a
                   href="https://github.com/not-ericdong/Restaurant-COVID19-Contact-Tracing/blob/master/README.md">page</a>.
             </p>
          </div>
