added proper text1

--- a/customer.html
+++ b/customer.html
@@ -15,7 +15,7 @@
       <header>
          <!-- <img src="images/img.png" alt="description"> -->
          <h1>
-            Restaurant COVID-19 Contact Tracing
+            <!-- COVID-19 Contact Tracing -->
          </h1>
       </header>
 
