fixed issue with customer.html

--- a/customer.html
+++ b/customer.html
@@ -15,12 +15,12 @@
       <header>
          <!-- <img src="images/img.png" alt="description"> -->
          <h1>
-            <!-- COVID-19 Contact Tracing -->
+            COVID-19 Contact Tracing
          </h1>
       </header>
 
       <nav class="box1">
-         <a href="https://not-ericdong.github.io/Restaurant-COVID19-Contact-Tracing/customer.html">For Customers</a>
+         <!-- <a href="https://not-ericdong.github.io/Restaurant-COVID19-Contact-Tracing/customer.html">For Customers</a> -->
          <a href="https://not-ericdong.github.io/Restaurant-COVID19-Contact-Tracing/businessess.html">For Businesses</a>
          <a href="https://not-ericdong.github.io/Restaurant-COVID19-Contact-Tracing/reporting.html">Reporting</a>
          <a href="mailto:ericdong97@gmail.com">Contact</a>
